# garance

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
.github/: dependabot.yml
.github/homebrew/: garance.rb.tmpl
.github/workflows/: release.yml  test-engine.yml  test-packages.yml  test-services.yml
cli/: Dockerfile  go.mod  go.sum  main.go
cli/cmd/: db.go  dev.go  gen.go  init.go  init_test.go  root.go  status.go  version.go
cli/internal/compose/: compose.go  template.go
cli/internal/db/: migrate.go
cli/internal/project/: project.go  templates.go
cli/internal/schema/: compile.go
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/app/: layout.tsx
dashboard/src/components/: data-table.tsx  sidebar.tsx
dashboard/src/lib/: garance.ts
deploy/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
docs/site/: api.md  auth.md  cli.md  getting-started.md  index.md  package-lock.json  package.json  schema.md  sdk.md  self-host.md  storage.md
docs/site/.vitepress/: config.ts
docs/superpowers/plans/: 2026-03-25-engine-v2.md  2026-03-25-garance-auth.md  2026-03-25-garance-cli.md  2026-03-25-garance-dashboard.md  2026-03-25-garance-docker-compose.md  2026-03-25-garance-engine.md  (+8 more)
engine/: Cargo.toml  Dockerfile
engine/crates/garance-codegen/: Cargo.toml
engine/crates/garance-codegen/src/: lib.rs  typescript.rs
engine/crates/garance-codegen/tests/: typescript_test.rs
engine/crates/garance-engine/: Cargo.toml  build.rs
engine/crates/garance-engine/src/: lib.rs  main.rs
engine/crates/garance-engine/src/api/: error.rs  mod.rs  routes.rs  sql_guard.rs  state.rs
engine/crates/garance-engine/src/diff/: diff.rs  mod.rs  normalize.rs  sql_gen.rs
engine/crates/garance-engine/src/grpc/: server.rs
engine/crates/garance-engine/src/query/: builder.rs  error.rs  filter.rs  mod.rs
engine/crates/garance-engine/src/schema/: introspect.rs  json_schema.rs  mod.rs  rls.rs  roles.rs  triggers.rs  types.rs
engine/crates/garance-engine/tests/: api_test.rs  diff_test.rs  introspect_test.rs  json_schema_test.rs  meta_test.rs  migrate_test.rs  query_test.rs  rls_integration_test.rs  rls_test.rs  schema_types_test.rs  sql_test.rs
engine/crates/garance-pooler/: Cargo.toml
engine/crates/garance-pooler/src/: config.rs  error.rs  lib.rs  pool.rs
engine/crates/garance-pooler/tests/: pool_test.rs
proto/: buf.gen.yaml  go.mod
sdks/typescript/: package-lock.json  package.json  tsconfig.json
services/: go.work  go.work.sum
services/auth/: Dockerfile  go.mod  go.sum  main.go
services/gateway/: Dockerfile  go.mod  go.sum  main.go
services/realtime/: .gitignore  Dockerfile  mix.exs
services/storage/: Dockerfile  go.mod  go.sum  main.go
(+102 files in other folders)
