[package]
name = "garance-engine"
version.workspace = true
edition.workspace = true

[dependencies]
garance-pooler = { path = "../garance-pooler" }
garance-codegen = { path = "../garance-codegen" }
tokio-postgres.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tonic.workspace = true
prost.workspace = true
sha2.workspace = true

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
testcontainers = "0.24"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
axum-test = "17"
